--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,7 +8,10 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #323232;
+  background-color: #232323;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23111111' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%231c1c1c' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23262626' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23313131' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%233c3c3c' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23474747' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23535353' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
   color: #FFF;
   font-family: 'Montserrat', sans-serif;
   font-weight: normal;
@@ -56,6 +59,7 @@ header{
   align-content: center;
   align-items: center;
   justify-content: center;
+  max-width: 100vw;
   height: 100%;
   background: radial-gradient(rgba(68,68,68,0),#444 85%)!important;
 }
@@ -67,8 +71,9 @@ header{
   color: #FFF;
   padding: 1.5rem 2rem;
   box-shadow: 0 0.25rem 1.5rem 0.5rem #222;
-  margin-right: 1rem;
-  margin-left: 1rem;
+  /* margin-right: 1rem;
+  margin-left: 1rem; */
+  text-align: center;
 }
 .header-subtitle{
   background-color: #FFF;
@@ -78,8 +83,9 @@ header{
   border-radius: 0.25rem;
   padding: 0.35rem 1.5rem;
   box-shadow: 0 0.25rem 1.5rem 0.5rem #222;
-  margin-right: 1rem;
-  margin-left: 1rem;
+  /* margin-right: 1rem;
+  margin-left: 1rem; */
+  text-align: center;
 }
 [hidden],
 template {
@@ -449,6 +455,7 @@ pre tt:after {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 .nav-list{
   list-style: none;
@@ -479,15 +486,81 @@ pre tt:after {
   justify-content: center;
   align-content: center;
   align-items: center;
+  width: 100%;
+}
+.paper-dark{
+  background: radial-gradient(#485563, #29323c);
+  border-radius: 0.3rem;
+}
+.profile-img{
+  width: 40%;
+  border-radius: 50%;
+  box-shadow: 0 2px 11px -2px rgba(0,0,0,0.45);
+}
+.about-me-section{
+  margin: 2rem 0 2rem 0;
+  padding: 1rem;
+}
+.about-me-section h1{
+  text-align: center;
+}
+footer{
+  margin-top: 1rem;
+  padding: 4rem 0;
+  background-color: #222;
+}
+.footer-col{
+  width: 33.3333%;
+  flex: 0 0 33.3333%;
+  text-align: center;
+}
+.footer-link{
+  display: inline-block;
+  color: #FFf;
+  transition: all .2s ease-in-out;
+}
+.footer-link:active{
+  color: #00a1fe;
+  transform: scale(1.35);
 }
 @media only screen and (max-width: 796px){
   .container{
-    width: 100%;
+    width: 95%;
+  }
+  .header-title{
+    width: 90%;
+    font-size: 3rem;
+  }
+  .header-subtitle{
+    width: 90%;
+    font-size: 1.75rem;
+  }
+  .footer-col{
+    width: 55%;
+    flex: 0 0 55%;
+    margin: 2rem 0 2rem 0;
+    /* font-size: 200%; */
+  }
+  .profile-img{
+    width: 60%;
   }
 }
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
+  }
+  .profile-img{
+    width: 75%;
+  }
+}
+@media (hover:hover){
+  .footer-link:hover{
+    color: #04befe;
+    transform: scale(1.35);
+  }
+  .footer-link:active{
+    color: #00a1fe;
+    transform: scale(1.35);
   }
 }
 @keyframes fadeIn{
