--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,7 +9,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #232323;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23111111' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%231c1c1c' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23262626' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23313131' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%233c3c3c' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23474747' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23535353' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
+  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23009aff' fill-opacity='0.81' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to top, #434343 0%, black 100%); */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23434343' fill-opacity='1' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to top, #434343 0%, black 100%);
   background-attachment: fixed;
   background-size: cover;
   color: #FFF;
@@ -497,8 +498,8 @@ pre tt:after {
   border-radius: 50%;
   box-shadow: 0 2px 11px -2px rgba(0,0,0,0.45);
 }
-.about-me-section{
-  margin: 2rem 0 2rem 0;
+.md-section{
+  margin: 2rem 0;
   padding: 1rem;
 }
 .about-me-section h1{
