--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -3,30 +3,34 @@
     margin: 2rem 0 2rem 0;
 }
 .skills-list-container{
-    border-radius: 0.5rem;
-    box-shadow: 0 0 8px -3px rgba(255,255,255,0.65);
+    /* border-radius: 0.35rem; */
     flex: 0 0 25%;
     max-width: 25%;
-    background-color: #FFF;
+    /* background-color: #FFF; */
     margin: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
-.skills-list-container h3{
-    background: linear-gradient(to top, #009AFF,#0072ff) !important;
-    background-color: #0072ff;
+.skills-list-title{
     color: #FFF;
     text-align: center;
     margin: 0;
-    padding: 0.75rem 0;
+    padding: 2.5rem 0 0.25rem 0;
     width: 100%;
-    border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
 }
 .skill-list-carousel{
+    transform: translateY(1.25rem);
     width: 100%;
     display: flex;
     flex-direction: row;
     overflow: hidden;
     height: 300px;
+    background: #FFF;
+    border-radius: 0.3rem;
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -7px rgba(0,0,0,0.2);
 }
 .skill-container{
     display: flex;
@@ -56,15 +60,14 @@
     padding: 0;
     width: 90%;
     max-height: 250px;
-    /* height: 190px;
-    width: auto; */
-    /* max-width: 250px; */
 }
 .skills-list-container-footer{
     background: linear-gradient(to top, #009AFF,#0072ff) !important;
     background-color: #0072ff;
-    border-bottom-left-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
+    width: 92%;
+    border-bottom-left-radius: 0.35rem;
+    border-bottom-right-radius: 0.35rem;
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -7px rgba(0,0,0,0.2);
 }
 .skills-carousel-controls{
     display: flex;
